# Python---packages-and-built-in-functionality

./: Python_notes.md  README.md  python roadmap
.ipynb_checkpoints/: README-checkpoint.md
built_in_functionality/data_classes/: data_classes_tutorial_1.py  notes.md
built_in_functionality/data_classes/notebooks/: notes.md
built_in_functionality/data_classes/src/: data_class_tutorial 2.py  data_classes_tutorial2.ipynb  data_classes_tutorial_2.ipynb
built_in_functionality/logging/docs/notes/: logging_notes.md
learn_the_basics/: conditionals.ipynb
old_classification/: Python_notes.md
old_classification/built_in_functionality/data_classes/: sources.md
package_managers/UV/: README.md  pyproject.toml
